# githubPageTest

./: .gitignore  README.md  catalog.json  fitness_wasm-1bbfdee33695d018.js  fitness_wasm-1bbfdee33695d018_bg.wasm  fitness_wasm-2ed5735421358d2e.js  fitness_wasm-2ed5735421358d2e_bg.wasm  fitness_wasm-3403508fb79896dd.js  fitness_wasm-3403508fb79896dd_bg.wasm  fitness_wasm-8f06f5242dfa680d.js  fitness_wasm-8f06f5242dfa680d_bg.wasm  fitness_wasm-97fc4d51a6ba2d74.js  fitness_wasm-97fc4d51a6ba2d74_bg.wasm  fitness_wasm-9c42d2047cb28c14.js  fitness_wasm-9c42d2047cb28c14_bg.wasm  fitness_wasm-a184d7ac092ebfa3.js  fitness_wasm-a184d7ac092ebfa3_bg.wasm  fitness_wasm-a63f7cd743576672_bg.wasm  fitness_wasm-baf5d17972430f4.js  fitness_wasm-baf5d17972430f4_bg.wasm  index.html  scheda.json  sw.js
.github/workflows/: gh-pages.yml
app/: Cargo.toml  index.html  manifest.json  sw.js
app/schede/: ATHLON_01_05-2026.json  catalog.json  scheda Athlon_06_XX.json  scheda_Athlon_01_05.json  scheda_michael.json
app/src/: lib.rs  models.rs  recovery_timer.rs
app/src/components/: bottom_sheet.rs  calendar.rs  catalog_panel.rs  day_tabs.rs  exercise_card.rs  icons.rs  mod.rs  progress_bar.rs  session_history.rs  workout_view.rs
examples/schede/: workout_schema.json
schede/: ATHLON_01_05-2026.json  ATHLON_Hypertrophy_02_05-2026.json  ForzeBase_01_01-2026.json  ForzeBase_02_02-2026.json  IpertrofiaIntensa_01_03-2026.json  IpertrofiaIntensa_02_04-2026.json  catalog.json  legs_a.json  pull_a.json  push_a.json  scheda Athlon_06_XX.json  scheda_michael.json
