[package]
name = "fitness_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
gloo-file = "0.4"
gloo-timers = "0.2"
gloo-net = "0.7"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Touch", "TouchEvent", "TouchList", "Element",
  "Blob", "Url", "HtmlAnchorElement",
  "Document", "Window", "Location", "Navigator",
  "ServiceWorkerContainer", "ServiceWorkerRegistration",
  "ServiceWorker", "Notification", "NotificationPermission",
  "NotificationOptions",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
